added bfs, renamed

--- a/algorithms/graphTraversal.ipynb
+++ b/algorithms/graphTraversal.ipynb
@@ -4,17 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **Depth First Search**"
+    "## **Graph Traversal**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
     "from time import time\n",
-    "from random import randint"
+    "from random import randint\n",
+    "from collections import deque"
    ]
   },
   {
@@ -26,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,6 +46,28 @@
     "        self.graph[u][v] = 0\n",
     "        self.graph[v][u] = 0\n",
     "\n",
+    "    def dfs(self,node,visited=set()):\n",
+    "        visited.add(node)\n",
+    "        print(node, \"visited\")\n",
+    "        for i,e in enumerate(self.graph[node]):\n",
+    "            if e == 1 and i not in visited:\n",
+    "                self.dfs(i,visited)\n",
+    "        return visited\n",
+    "    \n",
+    "    def dfs_non_recursion(self,node):\n",
+    "        visited = []\n",
+    "        stack = []\n",
+    "\n",
+    "        stack.append(node)\n",
+    "        while(stack):\n",
+    "            v = stack.pop()\n",
+    "            visited.append(v)\n",
+    "            print(v)\n",
+    "            for i,e in enumerate(self.graph[v]):\n",
+    "                if e == 1 and i not in visited:\n",
+    "                    stack.append(i)\n",
+    "        return visited\n",
+    "\n",
     "    def print_graph(self):\n",
     "        for i in range(self.size):\n",
     "            print(\"[\", end=\" \")\n",
@@ -62,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,8 +113,7 @@
     "                print(j)\n",
     "\n",
     "    def dfs(self,node,visited:set=set()):\n",
-    "        # add all adjacent nodes to stack\n",
-    "        # visit each node, pop stack visit next\n",
+    "\n",
     "        visited.add(node)\n",
     "        #print(node, \"visited\")\n",
     "        for v in self.graph[node]:\n",
@@ -100,20 +122,38 @@
     "        \n",
     "        return visited\n",
     "    \n",
-    "    def dfs_non_recursion(self,node):\n",
+    "    def dfs_iterative(self,node):\n",
     "        visited = set()\n",
     "        stack = []\n",
     "\n",
     "        stack.append(node)\n",
+    "        visited.add(node)\n",
     "        \n",
     "        while stack:\n",
     "            node = stack.pop()\n",
-    "            visited.add(node)\n",
     "            #print(node)\n",
+    "\n",
     "            for v in self.graph[node]:\n",
     "                if v not in visited:\n",
     "                    stack.append(v)\n",
-    "        \n",
+    "                    visited.add(v)\n",
+    "        return visited\n",
+    "    \n",
+    "    def bfs(self,node):\n",
+    "        visited = set()\n",
+    "        queue = deque([])\n",
+    "\n",
+    "        visited.add(node)\n",
+    "        queue.append(node)\n",
+    "\n",
+    "\n",
+    "        while queue:\n",
+    "            node = queue.popleft()\n",
+    "            #print(node)\n",
+    "            for v in self.graph[node]:\n",
+    "                if v not in visited:\n",
+    "                    queue.append(v)\n",
+    "                    visited.add(v)\n",
     "        return visited"
    ]
   },
@@ -121,12 +161,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Full Traversal Test"
+    "DFS Full Traversal Test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -134,11 +174,11 @@
      "output_type": "stream",
      "text": [
       "Recursion\tIterative\n",
-      "0.00099659\t0.04935598\n",
-      "0.00099659\t0.05733204\n",
-      "0.00099659\t0.03902793\n",
-      "0.00100112\t0.04385519\n",
-      "0.00099277\t0.03924894\n"
+      "0.00100088\t0.02841401\n",
+      "0.00099659\t0.02192640\n",
+      "0.00100017\t0.01893282\n",
+      "0.00100064\t0.01993251\n",
+      "0.00099683\t0.02343106\n"
      ]
     }
    ],
@@ -169,7 +209,63 @@
     "    visited = set()\n",
     "    for i in range(N):\n",
     "        if i not in visited:\n",
-    "            visited = graph.dfs_non_recursion(i)\n",
+    "            visited = graph.dfs_iterative(i)\n",
+    "    end = time()\n",
+    "\n",
+    "    print(f\"{end-start:.8f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "BFS Full Traversal Test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BFS\t\tDFS\n",
+      "0.02454972\t0.02144432\n",
+      "0.01898623\t0.01893306\n",
+      "0.01296639\t0.01195836\n",
+      "0.02064562\t0.01892066\n",
+      "0.02492213\t0.02590871\n"
+     ]
+    }
+   ],
+   "source": [
+    "N = 2000\n",
+    "\n",
+    "print(\"BFS\\t\\tDFS\")\n",
+    "\n",
+    "for test in range(5):\n",
+    "\n",
+    "    graph = ListGraph(N)\n",
+    "\n",
+    "    for _ in range(2*N):\n",
+    "        graph.add_edge(randint(0,N-1),randint(0,N-1))\n",
+    "\n",
+    "    start = time()\n",
+    "    visited = set()\n",
+    "    for i in range(N):\n",
+    "        if i not in visited:\n",
+    "            visited = graph.bfs(i)\n",
+    "    end = time()\n",
+    "\n",
+    "    print(f\"{end-start:.8f}\",end=\"\\t\")\n",
+    "\n",
+    "    start = time()\n",
+    "    visited = set()\n",
+    "    for i in range(N):\n",
+    "        if i not in visited:\n",
+    "            visited = graph.dfs_iterative(i)\n",
     "    end = time()\n",
     "\n",
     "    print(f\"{end-start:.8f}\")"
