count & radix added

--- a/algorithms/sorting.ipynb
+++ b/algorithms/sorting.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,8 +152,46 @@
     "\n",
     "    return _quick_sort2(left) + middle + _quick_sort2(right)\n",
     "\n",
+    "@timer\n",
+    "def count_sort(list):\n",
+    "    size = len(list)\n",
+    "    maximum = max(list)\n",
+    "    output = [0] * size\n",
+    "    count = [0] * (maximum+1)\n",
     "\n",
+    "    for num in list:\n",
+    "        count[num] += 1\n",
     "\n",
+    "    for i in range(1,len(count)):\n",
+    "        count[i] += count[i-1]\n",
+    "    \n",
+    "    for i in range(size-1,-1,-1):\n",
+    "        count[list[i]] -= 1\n",
+    "        output[count[list[i]]] = list[i]\n",
+    "\n",
+    "    for i in range(size):\n",
+    "        list[i] = output[i]\n",
+    "\n",
+    "@timer\n",
+    "def radix_sort(list):\n",
+    "    digits = len(str(max(list)))\n",
+    "    for d in range(digits):\n",
+    "        size = len(list)\n",
+    "        output = [0] * size\n",
+    "        count = [0] * 10\n",
+    "\n",
+    "        for num in list:\n",
+    "            count[num // (10**d) % 10] += 1\n",
+    "\n",
+    "        for i in range(1,10):\n",
+    "            count[i] += count[i-1]\n",
+    "        \n",
+    "        for i in range(size-1,-1,-1):\n",
+    "            count[list[i] // (10**d) % 10] -= 1\n",
+    "            output[count[list[i] // (10**d) % 10]] = list[i]\n",
+    "\n",
+    "        for i in range(size):\n",
+    "            list[i] = output[i]\n",
     "\n"
    ]
   },
@@ -166,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -174,22 +212,26 @@
      "output_type": "stream",
      "text": [
       "Bubble Sort\n",
-      "0.028838158\n",
+      "0.77592206\n",
       "Selection Sort\n",
-      "0.012000084\n",
+      "0.29916334\n",
       "Insertion Sort\n",
-      "0.011999607\n",
+      "0.29519272\n",
       "Merge Sort\n",
-      "0.0010004044\n",
+      "0.0059857368\n",
       "Quick Sort in place\n",
-      "0.0009996891\n",
+      "0.0049750805\n",
       "Quick Sort\n",
-      "0.0009996891\n"
+      "0.0039825439\n",
+      "Counting Sort\n",
+      "0.0010001659\n",
+      "Radix Sort\n",
+      "0.0035765171\n"
      ]
     }
    ],
    "source": [
-    "N = 1000\n",
+    "N = 5000\n",
     "test = [randint(0,1000) for x in range(N)]\n",
     "\n",
     "# create copy\n",
@@ -217,8 +259,16 @@
     "print(\"Quick Sort\")\n",
     "quick_test2 = quick_sort2(quick_test2)\n",
     "\n",
+    "count_test = test[:]\n",
+    "print(\"Counting Sort\")\n",
+    "count_sort(count_test)\n",
+    "\n",
+    "radix_test = test[:]\n",
+    "print(\"Radix Sort\")\n",
+    "radix_sort(radix_test)\n",
+    "\n",
     "for i in range(len(test)-1):\n",
-    "    assert(quick_test[i] <= quick_test[i+1])"
+    "    assert(radix_test[i] <= radix_test[i+1])"
    ]
   }
  ],
