bucket, heap, shell added

--- a/algorithms/sorting.ipynb
+++ b/algorithms/sorting.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,6 +114,7 @@
     "def quick_sort(list):\n",
     "    _quick_sort(list,0,len(list)-1)\n",
     "\n",
+    "# in place quicksort\n",
     "def _quick_sort(list, start, end):\n",
     "    if start >= end:\n",
     "        return\n",
@@ -192,7 +193,69 @@
     "\n",
     "        for i in range(size):\n",
     "            list[i] = output[i]\n",
-    "\n"
+    "\n",
+    "@timer\n",
+    "def bucket_sort(list):\n",
+    "    num_buckets = 10\n",
+    "    buckets = [[] for x in range(num_buckets)]\n",
+    "\n",
+    "    for num in list:\n",
+    "        buckets[num//100].append(num)\n",
+    "\n",
+    "    # countsort\n",
+    "    for arr in buckets:\n",
+    "        # if arr:\n",
+    "        #     count_sort(arr)\n",
+    "        arr.sort()\n",
+    "\n",
+    "    i = 0\n",
+    "    for arr in buckets:\n",
+    "        for num in arr:\n",
+    "            list[i] = num\n",
+    "            i += 1\n",
+    "\n",
+    "# For Heap Sort\n",
+    "def heapify(list,n,i):\n",
+    "    largest = i\n",
+    "    left_child = 2*i+1\n",
+    "    right_child = 2*i+2\n",
+    "\n",
+    "    if left_child < n and list[left_child] > list[largest]:\n",
+    "        largest = left_child\n",
+    "    \n",
+    "    if right_child < n and list[right_child] > list[largest]:\n",
+    "        largest = right_child\n",
+    "    \n",
+    "    if largest != i:\n",
+    "        list[i],list[largest] = list[largest],list[i]\n",
+    "        heapify(list,n,largest)\n",
+    "\n",
+    "@timer\n",
+    "def heap_sort(list):\n",
+    "    n = len(list)\n",
+    "\n",
+    "    # turn list into max heap\n",
+    "    for i in range((n//2)-1,-1,-1):\n",
+    "        heapify(list,n,i)\n",
+    "    \n",
+    "    for i in range(n-1,0,-1):\n",
+    "        list[0],list[i] = list[i],list[0]\n",
+    "        heapify(list,i,0)\n",
+    "\n",
+    "@timer\n",
+    "def shell_sort(list):\n",
+    "    n = len(list)\n",
+    "    interval = n//2\n",
+    "\n",
+    "    while interval > 0:\n",
+    "        for i in range(interval,n):\n",
+    "            key = list[i]\n",
+    "            j = i\n",
+    "            while j>=interval and key < list[j-interval]:\n",
+    "                list[j] = list[j-interval]\n",
+    "                j -= interval\n",
+    "            list[j] = key\n",
+    "        interval //= 2\n"
    ]
   },
   {
@@ -204,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -212,27 +275,33 @@
      "output_type": "stream",
      "text": [
       "Bubble Sort\n",
-      "0.77592206\n",
+      "0.71761155\n",
       "Selection Sort\n",
-      "0.29916334\n",
+      "0.28835058\n",
       "Insertion Sort\n",
-      "0.29519272\n",
+      "0.28986025\n",
       "Merge Sort\n",
-      "0.0059857368\n",
+      "0.0059804916\n",
       "Quick Sort in place\n",
-      "0.0049750805\n",
+      "0.0041055679\n",
       "Quick Sort\n",
-      "0.0039825439\n",
+      "0.0049259663\n",
       "Counting Sort\n",
-      "0.0010001659\n",
+      "0.0\n",
       "Radix Sort\n",
-      "0.0035765171\n"
+      "0.0029914379\n",
+      "Bucket Sort\n",
+      "0.00099515915\n",
+      "Heap Sort\n",
+      "0.0029938221\n",
+      "Shell Sort\n",
+      "0.0054967403\n"
      ]
     }
    ],
    "source": [
     "N = 5000\n",
-    "test = [randint(0,1000) for x in range(N)]\n",
+    "test = [randint(0,999) for x in range(N)]\n",
     "\n",
     "# create copy\n",
     "bubble_test = test[:]\n",
@@ -267,8 +336,21 @@
     "print(\"Radix Sort\")\n",
     "radix_sort(radix_test)\n",
     "\n",
+    "if max(test) < 1000:\n",
+    "    bucket_test = test[:]\n",
+    "    print(\"Bucket Sort\")\n",
+    "    bucket_sort(bucket_test)\n",
+    "\n",
+    "heap_test = test[:]\n",
+    "print(\"Heap Sort\")\n",
+    "radix_sort(heap_test)\n",
+    "\n",
+    "shell_test = test[:]\n",
+    "print(\"Shell Sort\")\n",
+    "shell_sort(shell_test)\n",
+    "\n",
     "for i in range(len(test)-1):\n",
-    "    assert(radix_test[i] <= radix_test[i+1])"
+    "    assert(shell_test[i] <= shell_test[i+1])"
    ]
   }
  ],
