bellman ford + tests added

--- a/algorithms/shortestPath.ipynb
+++ b/algorithms/shortestPath.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,6 +17,22 @@
     "from random import randint\n",
     "from time import time\n",
     "import heapq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def timer(func):\n",
+    "    def wrapper(*args):\n",
+    "        start = time()\n",
+    "        result = func(*args)\n",
+    "        end = time()\n",
+    "        print(f\"{end-start:.8f}\")\n",
+    "        return result\n",
+    "    return wrapper"
    ]
   },
   {
@@ -28,11 +44,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
-    "nodes = 10\n",
+    "nodes = 300\n",
     "G = nx.gnp_random_graph(nodes,0.5,directed=False)\n",
     "for (u,v,w) in G.edges(data=True):\n",
     "    w['weight'] = randint(1,20)"
@@ -40,10 +56,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
+    "@timer\n",
     "def dijkstra(s):\n",
     "    visited = []\n",
     "    heap = []\n",
@@ -62,9 +79,79 @@
     "                if dist + w['weight'] < distance[v]:\n",
     "                    distance[v] = dist + w['weight']\n",
     "                    heapq.heappush(heap,(distance[v],v))\n",
-    "    \n",
     "    return distance\n",
-    "\n"
+    "\n",
+    "@timer\n",
+    "def bellman_ford(s):\n",
+    "    distance = [float('inf') for _ in range(nodes)]\n",
+    "\n",
+    "    distance[s] = 0\n",
+    "\n",
+    "    for _ in range(nodes-1):\n",
+    "        updated = False\n",
+    "        for u in G.nodes():\n",
+    "            for _,v,w in G.edges(u,data=True):\n",
+    "                if distance[u] != float('inf') and distance[u] + w['weight'] < distance[v]:\n",
+    "                    distance[v] = distance[u] + w['weight']\n",
+    "                    updated = True\n",
+    "        if not updated:\n",
+    "            break\n",
+    "\n",
+    "    # Check for negative cycles\n",
+    "    for u in G.nodes():\n",
+    "        for _,v,w in G.edges(u,data=True):\n",
+    "            if distance[u] != float('inf') and distance[u] + w['weight'] < distance[v]:\n",
+    "                print(\"Negative Cycle Detected\")\n",
+    "                return False\n",
+    "                \n",
+    "    return distance\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Shortest Path Tests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dijkstra's\n",
+      "0.09619546\n",
+      "0.08820391\n",
+      "0.08806849\n",
+      "0.08522320\n",
+      "0.08722019\n",
+      "\n",
+      "Bellman Ford\n",
+      "0.04484916\n",
+      "0.04438066\n",
+      "0.04484653\n",
+      "0.04438162\n",
+      "0.04417467\n"
+     ]
+    }
+   ],
+   "source": [
+    "d = []\n",
+    "bm = []\n",
+    "\n",
+    "print(\"Dijkstra's\")\n",
+    "for test in range(5):\n",
+    "    d = dijkstra(0)\n",
+    "print(\"\\nBellman Ford\")\n",
+    "for test in range(5):\n",
+    "    bm = bellman_ford(0)\n",
+    "\n",
+    "\n",
+    "assert(d == bm)"
    ]
   }
  ],
