floyd warshall added

--- a/algorithms/shortestPath.ipynb
+++ b/algorithms/shortestPath.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,11 +44,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
-    "nodes = 300\n",
+    "nodes = 150\n",
     "G = nx.gnp_random_graph(nodes,0.5,directed=False)\n",
     "for (u,v,w) in G.edges(data=True):\n",
     "    w['weight'] = randint(1,20)"
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,8 @@
     "\n",
     "    while heap:\n",
     "        (dist,u) = heapq.heappop(heap)\n",
-    "        visited.append(u)\n",
+    "        if u not in visited:\n",
+    "            visited.append(u)\n",
     "\n",
     "        for _,v,w in G.edges(u,data=True):\n",
     "            if v not in visited:\n",
@@ -104,7 +105,23 @@
     "                print(\"Negative Cycle Detected\")\n",
     "                return False\n",
     "                \n",
-    "    return distance\n"
+    "    return distance\n",
+    "\n",
+    "@timer\n",
+    "def floyd_warshall(G):\n",
+    "    path_graph = [[float('inf') for _ in range(nodes)] for i in range(nodes)]\n",
+    "    for i in range(nodes):\n",
+    "        path_graph[i][i] = 0\n",
+    "    \n",
+    "    for u,v,w in G.edges(data=True):\n",
+    "        path_graph[u][v] = w['weight']\n",
+    "        # for undirected graph\n",
+    "        path_graph[v][u] = w['weight']\n",
+    "\n",
+    "    for k in range(nodes):\n",
+    "        for i in range(nodes):\n",
+    "            for j in range(nodes):\n",
+    "                path_graph[i][j] = min(path_graph[i][j],path_graph[i][k] + path_graph[k][j])\n"
    ]
   },
   {
@@ -116,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -124,18 +141,25 @@
      "output_type": "stream",
      "text": [
       "Dijkstra's\n",
-      "0.09619546\n",
-      "0.08820391\n",
-      "0.08806849\n",
-      "0.08522320\n",
-      "0.08722019\n",
+      "0.01399875\n",
+      "0.01300216\n",
+      "0.01399899\n",
+      "0.01299930\n",
+      "0.01200032\n",
       "\n",
       "Bellman Ford\n",
-      "0.04484916\n",
-      "0.04438066\n",
-      "0.04484653\n",
-      "0.04438162\n",
-      "0.04417467\n"
+      "0.01599979\n",
+      "0.01597619\n",
+      "0.01705551\n",
+      "0.01500130\n",
+      "0.01499844\n",
+      "\n",
+      "Floyd Warshall\n",
+      "0.36208534\n",
+      "0.34499955\n",
+      "0.35950994\n",
+      "0.33930278\n",
+      "0.34299660\n"
      ]
     }
    ],
@@ -150,8 +174,11 @@
     "for test in range(5):\n",
     "    bm = bellman_ford(0)\n",
     "\n",
+    "assert(d == bm)\n",
     "\n",
-    "assert(d == bm)"
+    "print(\"\\nFloyd Warshall\")\n",
+    "for test in range(5):\n",
+    "    floyd_warshall(G)"
    ]
   }
  ],
